Fixes DT-759. Feature image space sympathises with default image on smaller screens

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -547,9 +547,6 @@ input[type="search"]::-webkit-search-decoration {
 }
 
 .widget .extendednavigation {
-	ul {
-		float: right;
-	}
 	li > .text {
 		padding: 0;
 	}
@@ -612,6 +609,7 @@ input[type="search"]::-webkit-search-decoration {
 .widget.feature .feature-bgimg .content,
 .widget.feature .feature-bgimg {
 	height: 570px;
+	background-position: 25% 50%;
 }
 
 // Slideshow
